# vaultforge

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  TODO  eslint.config.ts  index.html  lint.sh  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yaml
scripts/: generate-icon.mjs  sync-cargo-version.mjs
src/: commands.ts  events.ts  format.ts  main.ts  networks.json  networks.ts  qr.ts  render.ts  state.ts  styles.css  theme.json  theme.ts  toasts.ts  types.ts  walletApi.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activity.rs  assets.rs  commands.rs  derivation.rs  dto.rs  main.rs  providers.rs  state.rs  storage.rs  tests.rs  tx.rs  validation.rs
src-tauri/src/commands/: market.rs  tx.rs  wallet.rs
src-tauri/src/providers/: bitcoin.rs  evm.rs  http.rs  prices.rs  solana.rs  tron.rs
src-tauri/src/tx/: bitcoin.rs  evm.rs  solana.rs  tron.rs
