[package]
name = "vaultforge-wallet"
version = "0.1.0"
description = "A local-first crypto wallet desktop app"
authors = ["VaultForge"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
bip39 = "1.1"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
ripemd = "0.1"
bs58 = { version = "0.4", features = ["check"] }
bech32 = "0.8"
ed25519-dalek = "1.0"
tauri = { version = "2", features = [] }
