[package]
name = "vaultforge-wallet"
version = "0.3.0"
description = "A local-first crypto wallet desktop app"
authors = ["VaultForge"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.11"
argon2 = "0.5"
base64 = "0.22"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = { version = "2", features = ["openssl-vendored"] }
spl-associated-token-account = "4"
spl-token = "6"
sha2 = "0.11"
bip39 = "2.2"
bip32 = "0.5"
hmac = "0.13"
k256 = { version = "0.14", features = ["ecdsa"] }
rlp = "0.6"
sha3 = "0.12"
ripemd = "0.2"
bs58 = { version = "0.5", features = ["check"] }
bech32 = "0.12"
ed25519-dalek = "1.0"
zeroize = { version = "1", features = ["zeroize_derive"] }
tokio = { version = "1", features = ["time"] }
tauri = { version = "2", features = ["image-png"] }
# cookie 0.18.1 does not compile against time 0.3.52's parsing API.
time = "=0.3.51"
